--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -18,14 +18,13 @@ import {
     Text,
     Separator,
     Box,
-    Menu, 
-    MenuButton, 
-    MenuItem, 
-    useMenuState
+    DisclosurePrimitive,
+    DisclosurePrimitiveContent,
+    useDisclosurePrimitiveState
     } from '@twilio-paste/core'
 
 <Grid gutter="space40">
-  <Column span={6} offset={2}>
+  <Column span={4} offset={2}>
     <Heading as="h1" variant="heading10">I&rsquo;m <Box as="span" backgroundColor="colorBackgroundBrandHighlight">Aayush Iyer</Box>. I work on building better products through design, and better design through systems.</Heading>
     <Box backgroundColor="colorText">
       <Stack orientation="horizontal" spacing="space60">
@@ -43,21 +42,6 @@ import {
 <Box marginTop="space100">
   <Grid gutter="space40">
     <Column span={4} offset={2}>
-      <Heading as="h2" variant="heading20">Work Highlights</Heading>
-      <Heading as="h3" variant="heading40">Design at Twilio</Heading>
-      <Paragraph>I joined Twilio as their third Product Designer. Presently, I manage the Design Systems team, and am part of UX Leadership. My focus at Twilio has been on resilient UI engineering, and widening the spectrum of who gets to build and communicate with technology.</Paragraph>
-      <UnorderedList>
-        <ListItem>Paste: Twilio&rsquo;s design system</ListItem>
-        <ListItem>Studio: A drag &amp; drop coding tool</ListItem>
-        <ListItem>Autopilot: A low code bot builder</ListItem>
-      </UnorderedList>
-      <Heading as="h3" variant="heading40">Other work</Heading>
-      <Paragraph>The 17 years since my first job as a journalist, have shaped my approach towards building things. Along the way I&rsquo;ve built hardware jukeboxes, award-winning digital campaigns, and a whole host of really terrible software - they all inform where I got to and where I&rsquo;m going.</Paragraph>
-      <Link href="/work" passHref> 
-        <Anchor>All Work</Anchor>
-      </Link>
-    </Column>
-    <Column span={4}>
       <Heading as="h2" variant="heading20">Recent Writing</Heading>
       <Box as="div"
         borderWidth="borderWidth10"
@@ -70,6 +54,16 @@ import {
       </Box>
       <Anchor>All Writing</Anchor>   
     </Column>
+    <Column span={4}>
+      <Heading as="h2" variant="heading20">Work</Heading> 
+      <Heading as="h3" variant="heading40">Design at Twilio</Heading>
+      <Paragraph>I joined Twilio in 2017 as their third Product Designer. Today, I manage the Design Systems team, and am part of UX Leadership. My focus at Twilio has been on resilient UI design &amp; engineering, and widening the spectrum of who gets to build and communicate with technology.</Paragraph>
+      <Heading as="h3" variant="heading40">Other work</Heading>
+      <Paragraph>The 17 years since my first job as a journalist have shaped my approach towards building things. Along the way I&rsquo;ve built hardware jukeboxes, award-winning digital campaigns, and a whole host of really terrible software - somehow, they all informed where I got to and where I&rsquo;m going.</Paragraph>
+      <Link href="/work" passHref> 
+        <Anchor>All Work</Anchor>
+      </Link>
+    </Column>
   </Grid>
 </Box>
 <Box as="section"
@@ -77,6 +71,9 @@ import {
   marginTop="space50"
 >
 </Box>
+
+
+
 
   
 
