feat(website): added footer

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -34,7 +34,7 @@ import {
         <Link href="//twitter.com/aayush" passHref> 
           <Anchor>Twitter</Anchor>
         </Link>
-        <Anchor>Writing</Anchor>        
+        {/* <Anchor>Writing</Anchor>         */}
       </Stack>
     </Box>
   </Column>
@@ -52,7 +52,6 @@ import {
       >
         <Text as="p">This space is intentionally left blank</Text>
       </Box>
-      <Anchor>All Writing</Anchor>   
     </Column>
     <Column span={4}>
       <Heading as="h2" variant="heading20">Work</Heading> 
@@ -67,15 +66,46 @@ import {
   </Grid>
 </Box>
 <Box as="section"
-  paddingBottom="space50"
   marginTop="space50"
+  paddingTop="space100"
+  paddingBottom="space100"
+  backgroundColor="colorBackgroundInverse"
 >
+  <Grid gutter="space40">
+    <Column span={3} offset={1}>
+      <Text
+        as="p"
+        color="colorTextInverse"
+      >
+        This site is being built, in an act of extreme dogfooding, with <Link href="//paste.twilio.design/" passHref><Text
+        as="a" color="colorTextInverse">Paste</Text></Link>. It also uses <Link href="//nextjs.org/" passHref><Text
+        as="a" color="colorTextInverse">Next.js</Text></Link>, which is nice. It was mostly possible due to <Link href="//simontaggart.com/" passHref><Text
+        as="a" color="colorTextInverse">Simon Taggart</Text></Link>, who patiently handled my 101 Qs.
+      </Text>
+    </Column>
+    <Column span={2} offset={1}>
+      <Box>
+        <Stack orientation="vertical" spacing="space30">
+          <Link href="/work" passHref> 
+            <Text as="a" color="colorTextInverse">Work</Text>
+          </Link>
+          <Link href="//twitter.com/aayush" passHref> 
+            <Text as="a" color="colorTextInverse">Twitter</Text>
+          </Link>
+        </Stack>
+      </Box>
+    </Column>
+    <Column span={3}>
+      <Box>
+        <Stack orientation="vertical" spacing="space30">
+          <Text as="p" color="colorTextInverse">Black Lives Matter.</Text>
+          <Text as="p" color="colorTextInverse">No man is illegal.</Text>
+          <Text as="p" color="colorTextInverse">Sex worker rights are labor rights.</Text>
+          <Text as="p" color="colorTextInverse">Our liberation is bound together.</Text>
+        </Stack>
+      </Box>
+    </Column>
+  </Grid>
 </Box>
 
-
-
-
-  
-
-<!-- [asas](/posts/test) -->
 
