feat(web): added separator

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -34,7 +34,6 @@ import {
         <Link href="//twitter.com/aayush" passHref> 
           <Anchor>Twitter</Anchor>
         </Link>
-        {/* <Anchor>Writing</Anchor>         */}
       </Stack>
     </Box>
   </Column>
@@ -43,15 +42,8 @@ import {
   <Grid gutter="space40">
     <Column span={4} offset={1}>
       <Heading as="h2" variant="heading20">Recent Writing</Heading>
-      <Box as="div"
-        borderWidth="borderWidth10"
-        borderColor="colorBorderDark"
-        borderStyle="solid"
-        padding="space50"
-        marginBottom="space50"
-      >
-        <Text as="p">This space is intentionally left blank</Text>
-      </Box>
+      <Separator orientation="horizontal" verticalSpacing="space50" />
+      <Text as="p">This space is unfortunately blank</Text>
     </Column>
     <Column span={4}>
       <Heading as="h2" variant="heading20">Work</Heading> 
