--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,37 +1,45 @@
 ---
 title: aayush.fyi
-date: '2020-05-29'
+date: "2020-05-29"
 ---
-import Link from 'next/link'
-import { 
-    Grid,
-    Column,
-    Card,
-    Heading,
-    Paragraph,
-    Button,
-    Anchor,
-    OrderedList, 
-    UnorderedList, 
-    ListItem,
-    Stack,
-    Text,
-    Separator,
-    Box,
-    DisclosurePrimitive,
-    DisclosurePrimitiveContent,
-    useDisclosurePrimitiveState
-    } from '@twilio-paste/core'
+
+import Link from "next/link";
+import {
+  Grid,
+  Column,
+  Card,
+  Heading,
+  Paragraph,
+  Button,
+  Anchor,
+  OrderedList,
+  UnorderedList,
+  ListItem,
+  Stack,
+  Text,
+  Separator,
+  Box,
+  DisclosurePrimitive,
+  DisclosurePrimitiveContent,
+  useDisclosurePrimitiveState,
+} from "@twilio-paste/core";
 
 <Grid gutter="space40">
   <Column span={4} offset={1}>
-    <Heading as="h1" variant="heading10">I&rsquo;m <Box as="span" backgroundColor="colorBackgroundBrandHighlight">Aayush Iyer</Box>. I work on building better products through design, and better design through systems.</Heading>
+    <Heading as="h1" variant="heading10">
+      I&rsquo;m{" "}
+      <Box as="span" backgroundColor="colorBackgroundBrandHighlight">
+        Aayush Iyer
+      </Box>
+      . I work on building better products through design, and better design
+      through systems.
+    </Heading>
     <Box backgroundColor="colorText">
       <Stack orientation="horizontal" spacing="space60">
-        <Link href="/work" passHref> 
+        <Link href="/work" passHref>
           <Anchor>Work</Anchor>
-         </Link>
-        <Link href="//twitter.com/aayush" passHref> 
+        </Link>
+        <Link href="//twitter.com/aayush" passHref>
           <Anchor>Twitter</Anchor>
         </Link>
       </Stack>
@@ -41,60 +49,107 @@ import {
 <Box marginTop="space100">
   <Grid gutter="space40">
     <Column span={4} offset={1}>
-      <Heading as="h2" variant="heading20">Recent Writing</Heading>
-      <Separator orientation="horizontal" verticalSpacing="space50" />
-      <Text as="p">This space is unfortunately blank</Text>
+      <Heading as="h2" variant="heading20">
+        Recent Writing
+      </Heading>
+      <Box backgroundColor="colorText">
+        <Stack orientation="horizontal" spacing="space60">
+          <Link href="/writing/scaling_support" passHref>
+            <Anchor>Scaling design system support</Anchor>
+          </Link>
+        </Stack>
+      </Box>
     </Column>
     <Column span={4}>
-      <Heading as="h2" variant="heading20">Work</Heading> 
-      <Heading as="h3" variant="heading40">Design at Twilio</Heading>
-      <Paragraph>I joined Twilio in 2017 as their third Product Designer. Today, I manage the Design Systems team, and am part of UX Leadership. My focus at Twilio has been on resilient UI design &amp; engineering, and widening the spectrum of who gets to build and communicate with technology.</Paragraph>
-      <Heading as="h3" variant="heading40">Other work</Heading>
-      <Paragraph>The 17 years since my first job as a journalist have shaped my approach towards building things. Along the way I&rsquo;ve built hardware jukeboxes, award-winning digital campaigns, and a whole host of really terrible software - somehow, they all informed where I got to and where I&rsquo;m going.</Paragraph>
+      <Heading as="h2" variant="heading20">
+        Work
+      </Heading>
+      <Heading as="h3" variant="heading40">
+        Design at Twilio
+      </Heading>
+      <Paragraph>
+        I joined Twilio in 2017 as their third Product Designer. Today, I manage
+        the Design Systems team, and am part of UX Leadership. My focus at
+        Twilio has been on resilient UI design &amp; engineering, and widening
+        the spectrum of who gets to build and communicate with technology.
+      </Paragraph>
+      <Heading as="h3" variant="heading40">
+        Other work
+      </Heading>
+      <Paragraph>
+        The 17 years since my first job as a journalist have shaped my approach
+        towards building things. Along the way I&rsquo;ve built hardware
+        jukeboxes, award-winning digital campaigns, and a whole host of really
+        terrible software - somehow, they all informed where I got to and where
+        I&rsquo;m going.
+      </Paragraph>
     </Column>
   </Grid>
 </Box>
-<Box as="section"
+<Box
+  as="section"
   marginTop="space50"
   paddingTop="space100"
   paddingBottom="space100"
   backgroundColor="colorBackgroundInverse"
 >
-  <Grid gutter={["space0","space0","space100"]}>
-    <Column span={[8,8,2]} offset={[1,1,1]}>
-      <Text
-        as="p"
-        color="colorTextInverse"
-      >
-        This site is being built, in an act of extreme dogfooding, with <Link href="//paste.twilio.design/" passHref><Text
-        as="a" color="colorTextInverse">Paste</Text></Link>. It also uses <Link href="//nextjs.org/" passHref><Text
-        as="a" color="colorTextInverse">Next.js</Text></Link>, which is nice. It was mostly possible due to <Link href="//simontaggart.com/" passHref><Text
-        as="a" color="colorTextInverse">Simon Taggart</Text></Link>, who patiently handled my 101 Qs.
+  <Grid gutter={["space0", "space0", "space100"]}>
+    <Column span={[8, 8, 2]} offset={[1, 1, 1]}>
+      <Text as="p" color="colorTextInverse">
+        This site is being built, in an act of extreme dogfooding, with{" "}
+        <Link href="//paste.twilio.design/" passHref>
+          <Text as="a" color="colorTextInverse">
+            Paste
+          </Text>
+        </Link>
+        . It also uses{" "}
+        <Link href="//nextjs.org/" passHref>
+          <Text as="a" color="colorTextInverse">
+            Next.js
+          </Text>
+        </Link>
+        , which is nice. It was mostly possible due to{" "}
+        <Link href="//simontaggart.com/" passHref>
+          <Text as="a" color="colorTextInverse">
+            Simon Taggart
+          </Text>
+        </Link>
+        , who patiently handled my 101 Qs.
       </Text>
     </Column>
-    <Column span={[8,8,2]} offset={[1,1,1]}>
+    <Column span={[8, 8, 2]} offset={[1, 1, 1]}>
       <Box>
         <Stack orientation="vertical" spacing="space30">
-          <Link href="/work" passHref> 
-            <Text as="a" color="colorTextInverse">Work</Text>
+          <Link href="/work" passHref>
+            <Text as="a" color="colorTextInverse">
+              Work
+            </Text>
           </Link>
-          <Link href="//twitter.com/aayush" passHref> 
-            <Text as="a" color="colorTextInverse">Twitter</Text>
+          <Link href="//twitter.com/aayush" passHref>
+            <Text as="a" color="colorTextInverse">
+              Twitter
+            </Text>
           </Link>
         </Stack>
       </Box>
     </Column>
-    <Column span={[8,8,3]} offset={[1,1,0]}>
+    <Column span={[8, 8, 3]} offset={[1, 1, 0]}>
       <Box>
         <Stack orientation="vertical" spacing="space30">
-          <Text as="p" color="colorTextInverse">Black Lives Matter.</Text>
-          <Text as="p" color="colorTextInverse">No man is illegal.</Text>
-          <Text as="p" color="colorTextInverse">Sex worker rights are labor rights.</Text>
-          <Text as="p" color="colorTextInverse">Our liberation is bound together.</Text>
+          <Text as="p" color="colorTextInverse">
+            Black Lives Matter.
+          </Text>
+          <Text as="p" color="colorTextInverse">
+            No man is illegal.
+          </Text>
+          <Text as="p" color="colorTextInverse">
+            Sex worker rights are labor rights.
+          </Text>
+          <Text as="p" color="colorTextInverse">
+            Our liberation is bound together.
+          </Text>
         </Stack>
       </Box>
     </Column>
   </Grid>
 </Box>
-
-
