feat(web): componentized footer

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -22,6 +22,7 @@ import {
     DisclosurePrimitiveContent,
     useDisclosurePrimitiveState
     } from '@twilio-paste/core'
+import {SiteFooter} from '../components/footer'
 
 <Grid gutter="space40">
   <Column span={4} offset={1}>
@@ -54,47 +55,4 @@ import {
     </Column>
   </Grid>
 </Box>
-<Box as="section"
-  marginTop="space50"
-  paddingTop="space100"
-  paddingBottom="space100"
-  backgroundColor="colorBackgroundInverse"
->
-  <Grid gutter={["space0","space0","space100"]}>
-    <Column span={[8,8,2]} offset={[1,1,1]}>
-      <Text
-        as="p"
-        color="colorTextInverse"
-      >
-        This site is being built, in an act of extreme dogfooding, with <Link href="//paste.twilio.design/" passHref><Text
-        as="a" color="colorTextInverse">Paste</Text></Link>. It also uses <Link href="//nextjs.org/" passHref><Text
-        as="a" color="colorTextInverse">Next.js</Text></Link>, which is nice. It was mostly possible due to <Link href="//simontaggart.com/" passHref><Text
-        as="a" color="colorTextInverse">Simon Taggart</Text></Link>, who patiently handled my 101 Qs.
-      </Text>
-    </Column>
-    <Column span={[8,8,2]} offset={[1,1,1]}>
-      <Box>
-        <Stack orientation="vertical" spacing="space30">
-          <Link href="/work" passHref> 
-            <Text as="a" color="colorTextInverse">Work</Text>
-          </Link>
-          <Link href="//twitter.com/aayush" passHref> 
-            <Text as="a" color="colorTextInverse">Twitter</Text>
-          </Link>
-        </Stack>
-      </Box>
-    </Column>
-    <Column span={[8,8,3]} offset={[1,1,0]}>
-      <Box>
-        <Stack orientation="vertical" spacing="space30">
-          <Text as="p" color="colorTextInverse">Black Lives Matter.</Text>
-          <Text as="p" color="colorTextInverse">No man is illegal.</Text>
-          <Text as="p" color="colorTextInverse">Sex worker rights are labor rights.</Text>
-          <Text as="p" color="colorTextInverse">Our liberation is bound together.</Text>
-        </Stack>
-      </Box>
-    </Column>
-  </Grid>
-</Box>
-
-
+<SiteFooter />
