--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,58 +1,88 @@
 ---
 title: aayush.fyi
-date: '2020-05-29'
+date: "2020-05-29"
 ---
-import Link from 'next/link'
-import { 
-    Grid,
-    Column,
-    Card,
-    Heading,
-    Paragraph,
-    Button,
-    Anchor,
-    OrderedList, 
-    UnorderedList, 
-    ListItem,
-    Stack,
-    Text,
-    Separator,
-    Box,
-    DisclosurePrimitive,
-    DisclosurePrimitiveContent,
-    useDisclosurePrimitiveState
-    } from '@twilio-paste/core'
-import {SiteFooter} from '../components/footer'
 
-<Grid gutter="space40">
-  <Column span={4} offset={1}>
-    <Heading as="h1" variant="heading10">I&rsquo;m <Box as="span" backgroundColor="colorBackgroundBrandHighlight">Aayush Iyer</Box>. I work on building better products through design, and better design through systems.</Heading>
-    <Box backgroundColor="colorText">
-      <Stack orientation="horizontal" spacing="space60">
-        <Link href="/work" passHref> 
-          <Anchor>Work</Anchor>
-         </Link>
-        <Link href="//twitter.com/aayush" passHref> 
-          <Anchor>Twitter</Anchor>
-        </Link>
-      </Stack>
-    </Box>
-  </Column>
-</Grid>
-<Box marginTop="space100">
-  <Grid gutter="space40">
+import Link from "next/link";
+import {
+  Grid,
+  Column,
+  Card,
+  Heading,
+  Paragraph,
+  Button,
+  Anchor,
+  OrderedList,
+  UnorderedList,
+  ListItem,
+  Stack,
+  Text,
+  Separator,
+  Box,
+  DisclosurePrimitive,
+  DisclosurePrimitiveContent,
+  useDisclosurePrimitiveState,
+} from "@twilio-paste/core";
+import { SiteFooter } from "../components/footer";
+
+<Box>
+  <Grid>
     <Column span={4} offset={1}>
-      <Heading as="h2" variant="heading20">Recent Writing</Heading>
-      <Separator orientation="horizontal" verticalSpacing="space50" />
-      <Text as="p">This space is unfortunately blank</Text>
-    </Column>
-    <Column span={4}>
-      <Heading as="h2" variant="heading20">Work</Heading> 
-      <Heading as="h3" variant="heading40">Design at Twilio</Heading>
-      <Paragraph>I joined Twilio in 2017 as their third Product Designer. Today, I manage the Design Systems team, and am part of UX Leadership. My focus at Twilio has been on resilient UI design &amp; engineering, and widening the spectrum of who gets to build and communicate with technology.</Paragraph>
-      <Heading as="h3" variant="heading40">Other work</Heading>
-      <Paragraph>The 17 years since my first job as a journalist have shaped my approach towards building things. Along the way I&rsquo;ve built hardware jukeboxes, award-winning digital campaigns, and a whole host of really terrible software - somehow, they all informed where I got to and where I&rsquo;m going.</Paragraph>
+      <Heading as="h1" variant="heading10">
+        I&rsquo;m{" "}
+        <Box as="span" backgroundColor="colorBackgroundBrandHighlight">
+          Aayush Iyer
+        </Box>
+        . I work on building better products through design, and better design
+        through systems.
+      </Heading>
+      <Box backgroundColor="colorText">
+        <Stack orientation="horizontal" spacing="space60">
+          <Link href="/work" passHref>
+            <Anchor>Work</Anchor>
+          </Link>
+          <Link href="//twitter.com/aayush" passHref>
+            <Anchor>Twitter</Anchor>
+          </Link>
+        </Stack>
+      </Box>
     </Column>
   </Grid>
+  <Box marginTop="space100">
+    <Grid>
+      <Column span={4} offset={1}>
+        <Heading as="h2" variant="heading20">
+          Recent Writing
+        </Heading>
+        <Separator orientation="horizontal" verticalSpacing="space50" />
+        <Text as="p">This space is unfortunately blank</Text>
+      </Column>
+      <Column span={4} offset={1}>
+        <Heading as="h2" variant="heading20">
+          Work
+        </Heading>
+        <Heading as="h3" variant="heading40">
+          Design at Twilio
+        </Heading>
+        <Paragraph>
+          I joined Twilio in 2017 as their third Product Designer. Today, I
+          manage the Design Systems team, and am part of UX Leadership. My focus
+          at Twilio has been on resilient UI design &amp; engineering, and
+          widening the spectrum of who gets to build and communicate with
+          technology.
+        </Paragraph>
+        <Heading as="h3" variant="heading40">
+          Other work
+        </Heading>
+        <Paragraph>
+          The 17 years since my first job as a journalist have shaped my
+          approach towards building things. Along the way I&rsquo;ve built
+          hardware jukeboxes, award-winning digital campaigns, and a whole host
+          of really terrible software - somehow, they all informed where I got
+          to and where I&rsquo;m going.
+        </Paragraph>
+      </Column>
+    </Grid>
+  </Box>
+  <SiteFooter />
 </Box>
-<SiteFooter />
