--- a/pages/work.mdx
+++ b/pages/work.mdx
@@ -24,7 +24,7 @@ import {
 } from "@twilio-paste/core";
 import {SiteFooter} from '../components/footer'
 
-<Grid gutter="space40">
+<Grid>
   <Column span={6} offset={1}>
     <Box>
       <Stack orientation="horizontal" spacing="space30">
@@ -43,7 +43,7 @@ import {SiteFooter} from '../components/footer'
 </Grid>
 
 <Box marginTop="space160">
-  <Grid gutter="space40">
+  <Grid>
     <Column span={5} offset={1}>
       <MediaObject as="div">
         <MediaFigure as="div" spacing="space60">
@@ -67,7 +67,7 @@ import {SiteFooter} from '../components/footer'
         </MediaBody>
       </MediaObject>
     </Column>
-    <Column span={5}>
+    <Column span={5} offset={1}>
       <Heading as="h3" variant="heading60">
         Links, talks, and related writing
       </Heading>
@@ -91,7 +91,7 @@ import {SiteFooter} from '../components/footer'
 </Box>
 
 <Box marginTop="space120">
-  <Grid gutter="space10">
+  <Grid>
     <Column span={3} offset={1}>
       <Heading as="h2" variant="heading50">
         Twilio Studio
@@ -102,7 +102,7 @@ import {SiteFooter} from '../components/footer'
         in a low-code way.
       </Paragraph>
     </Column>
-    <Column span={5}>
+    <Column span={5} offset={1}>
       <Heading as="h3" variant="heading60">
         Links, talks, and related writing
       </Heading>
@@ -129,7 +129,7 @@ import {SiteFooter} from '../components/footer'
 </Box>
 
 <Box marginTop="space120">
-  <Grid gutter="space10">
+  <Grid>
     <Column span={3} offset={1}>
       <Heading as="h2" variant="heading50">
         Vouch
@@ -138,7 +138,7 @@ import {SiteFooter} from '../components/footer'
         Vouch was a lending startup that hypothesized an alternate solution for credit-worthiness.
       </Paragraph>
     </Column>
-    <Column span={5}>
+    <Column span={5} offset={1}>
       <Heading as="h3" variant="heading60">
         Links, talks, and related writing
       </Heading>
@@ -152,7 +152,7 @@ import {SiteFooter} from '../components/footer'
 </Box>
 
 <Box marginTop="space120">
-  <Grid gutter="space10">
+  <Grid>
     <Column span={3} offset={1}>
       <Heading as="h2" variant="heading50">
         piq
@@ -163,7 +163,7 @@ import {SiteFooter} from '../components/footer'
         a valuable design exercise.
       </Paragraph>
     </Column>
-    <Column span={5}>
+    <Column span={5} offset={1}>
       <Heading as="h3" variant="heading60">
         Links, talks, and related writing
       </Heading>
